@@ -69,7 +69,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
-                android:onClick="editDateTime"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/start_image"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +105,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
-                android:onClick="editDateTime"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/stop_red_image"
                 app:layout_constraintEnd_toEndOf="parent"
